--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,7 @@
     <main>
         <h1>SPOTIPY-DATAVIZ</h1>
         <h2>Get special Insight to your Spotify Playlists</h2>
-        <button>
-            <a href='{{login_link}}'>LOGIN WITH SPOTIFY</a>
-        </button>
+        <a id="login" href='{{login_link}}'>LOGIN WITH SPOTIFY</a>
     </main>
     <footer>
         <nobr>Powered by
