--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -50,17 +50,22 @@ h1 {
     background-size:cover;
   background-position:center center;
   background-repeat:no-repeat;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .wrapper {
     width: 100%;
     height: 100%;
     top: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     padding: 50px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .element {
