--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -5,82 +5,116 @@
         <div class="titleWrapper">
             <div class="userGreeting">
                 <h1>You selected
-                    <br/>{{playlist.name}}
-                </br/>
-            </h1>
-            <img src="{{user.images.0.url}}" alt="alt" class="userPicture" id="grey"/>
-            <img src="{{playlist.images.0.url}}" alt="alt" class="userPicture"/>
-        </div>
-    </div>
-    <div class="wrapper">
-        <div class="songInfo">
-            <img src="{{closestSong.album.images.0.url}}" alt="alt" class="albumArt"/>
-            <div class="songText">
-                <strong>{{closestSong.name}}</strong>
-                <nobr>
-                    from
-                    <strong>{{closestSong.album.artists.0.name}}</strong>
-                </nobr>
-                describes your playlist best
+                    {{playlist.name}}
+                </h1>
+                <a href="/user">
+                    <img src="{{user.images.0.url}}" alt="alt" class="userPicture" id="grey"/>
+                </a>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="{{playlist.images.0.url}}" alt="alt" class="userPicture"/>
+                        </div>
+                        <div class="flip-card-back">
+                            <a href="/user">🡄 Back</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            {% if frequency is not None %}
-                <div id="my_dataviz"></div>
-            {% endif %}
         </div>
-        <div class="songFeatures">
-            <span>{{average_features.tempo|floatformat:0}}
-                BPM</span>
-            {% widthratio average_features.danceability 1 100 as danceability %}
-            {% widthratio average_features.acousticness 1 100 as acousticness %}
-            {% widthratio average_features.energy 1 100 as energy %}
-            {% widthratio average_features.valence 1 100 as valence %}
-            <span>{{danceability}}% danceable</span>
-            <span>{{acousticness}}% acoustic</span>
-            <span>{{energy}}% energy</span>
-            <span>{{valence}}% happy</span>
+        <div class="wrapper">
+            <div class="songInfo">
+                <img src="{{closestSong.album.images.0.url}}" alt="alt" class="albumArt"/>
+                <div class="songText">
+                    <strong>{{closestSong.name}}</strong>
+                    <nobr>
+                        from
+                        <strong>{{closestSong.album.artists.0.name}}</strong>
+                    </nobr>
+                    describes your playlist best
+                </div>
+                {% if frequency is not None %}
+                    <div id="my_dataviz"></div>
+                {% endif %}
+            </div>
+            <div class="songFeatures">
+                <span>{{average_features.tempo|floatformat:0}}
+                    BPM</span>
+                {% widthratio average_features.danceability 1 100 as danceability %}
+                {% widthratio average_features.acousticness 1 100 as acousticness %}
+                {% widthratio average_features.energy 1 100 as energy %}
+                {% widthratio average_features.valence 1 100 as valence %}
+                <span>{{danceability}}% danceable</span>
+                <span>{{acousticness}}% acoustic</span>
+                <span>{{energy}}% energy</span>
+                <span>{{valence}}% happy</span>
+            </div>
         </div>
-    </div>
-</main>
-<link rel="stylesheet" href="{% static '/css/playlist.css' %}">
-<script src="http://d3js.org/d3.v4.js"></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script>
+    </main>
+    <link rel="stylesheet" href="{% static '/css/playlist.css' %}">
+    <script src="http://d3js.org/d3.v3.js"></script>
+    <script>
+        var width = 300,
+            height = 300,
+            radius = width / 3;
 
-    // set the dimensions and margins of the graph
-    var width = 300
-    height = 300
-    margin = 40
+        var color = d3.scale.ordinal().range([
+            '#ffff00',
+            '#ffe217',
+            '#ffc52f',
+            '#ffa541',
+            '#f9884c',
+            '#ee6951',
+            '#df4c4e',
+            '#cc3144',
+            '#b51731',
+            '#9a0215',
+            '#fff008',
+            '#ffd423',
+            '#ffb639',
+            '#fd9648',
+            '#f57850',
+            '#e75b51',
+            '#d63f4a',
+            '#c1243b',
+            '#a80b24',
+            '#8b0000'
+        ]);
 
-    // The radius of the pieplot is half the width or half the height (smallest one). I substract a bit of margin.
-    var radius = Math.min(width, height) / 2 - margin
+        var arc = d3.svg.arc().outerRadius(radius - 10).innerRadius(0);
 
-    // append the svg object to the div called 'my_dataviz'
-    var svg = d3.select("#my_dataviz").append("svg").attr("width", width).attr("height", height).append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+        var pie = d3.layout.pie().sort(null).value(function (d) {
+            return d.value;
+        });
 
-    // Create dummy data
-    var data = {{frequency|safe}};
+        var svg = d3.select("#my_dataviz").append("svg").attr("width", width).attr("height", height).append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-    // set the color scale
-    var color = d3.scaleOrdinal().domain(data).range(d3.schemeCategory10);
+        var data_values = {{frequency|safe}};
+        var data = [];
 
-    // Compute the position of each group on the pie:
-    var pie = d3.pie().value(function (d) {
-        return d.value;
-    })
-    var data_ready = pie(d3.entries(data))
-    // Now I know that group A goes from 0 degrees to x degrees and so on. shape helper to build arcs:
-    var arcGenerator = d3.arc().innerRadius(0).outerRadius(radius)
+        for (data_value in data_values) {
+            var tmp = {}
+            tmp.label = data_value;
+            tmp.value = data_values[data_value];
+            data.push(tmp);
+        }
 
-    // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
-    svg.selectAll('mySlices').data(data_ready).enter().append('path').attr('d', arcGenerator).attr('fill', function (d) {
-        return (color(d.data.key))
-    }).attr("stroke", "black").style("stroke-width", "2px").style("opacity", 0.7)
+        var g = svg.selectAll(".arc").data(pie(data)).enter().append("g").attr("class", "arc");
 
-    // Now add the annotation. Use the centroid method to get the best coordinates
-    svg.selectAll('mySlices').data(data_ready).enter().append('text').text(function (d) {
-        return d.data.key
-    }).attr("transform", function (d) {
-        return "translate(" + arcGenerator.centroid(d) + ")";
-    }).style("text-anchor", "middle").style("font-size", 12)
-</script>
+        g.append("path").attr("d", arc).style("fill", function (d) {
+            return color(d.data.label);
+        });
+
+        var pos = d3.svg.arc().innerRadius(radius + 2).outerRadius(radius + 2);
+
+        var getAngle = function (d) {
+            return (180 / Math.PI * (d.startAngle + d.endAngle) / 2 - 90);
+        };
+
+        g.append("text").attr("transform", function (d) {
+            return "translate(" + pos.centroid(d) + ") rotate(" + getAngle(d) + ")";
+        }).attr("dy", 5).style("text-anchor", "start").text(function (d) {
+            return d.data.label;
+        });
+    </script>
 {% endblock content %}
