--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -43,3 +43,10 @@ a:hover {
 a:visited {
     color: #FFFFFF;
 }
+
+
+@media only screen and (max-width: 600px) {
+    h2 {
+        font-size: 3em;
+    }
+}
