--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -24,6 +24,7 @@ h1 {
     white-space: normal;
     background-color: #1DB954;
     margin-top: 1.5em;
+    color: #FFFFFF;
 }
 
 #login:hover {
@@ -60,4 +61,18 @@ a {
 
 a:hover {
     color: #FF8235;
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 5em;
+    }
+
+    h2 {
+        font-size: 3em;
+    }
+
+    footer {
+        font-size: 14px;
+    }
 }
