--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <title>Spotipy Dataviz</title>
         <meta description="Simple Webapp written in Python to gain additional Information about any Spotify Playlist (shared or not) with some cool visualizations."/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="{% static 'css/reset.css' %}">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
