--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -87,7 +87,7 @@
             return d.value;
         });
 
-        var svg = d3.select("#my_dataviz").append("svg").attr("width", width).attr("height", height).append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+        var svg = d3.select("#my_dataviz").append("svg").attr("width", width).attr("height", height).style("overflow", "visible").append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
         var data_values = {{frequency|safe}};
         var data = [];
